# grimd2pdf

./: .gitignore  LICENSE  README.md  build_binary.py  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
grimd2pdf/: __init__.py  __main__.py  server.py  standalone_server.py
tests/: malformed_example.md  test_conversion.py  test_mcp_client.py  test_mcp_server.py  test_server.py
